(chores) camel-core: use lower-overhead immutable lists
This avoids creating a mutable list and then wrapping it in an immutable one. Instead, creates an immutable list in a single shot.